--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
     - name: Zip repository
       run: mkdir dist && zip -r dist/Koerbchen-Modpack.zip .
     - name: 📂 Upload File
-      uses: genietim/ftp-action@releases/v4
+      uses: GenieTim/ftp-action@v4.0.1
       with:
         src: Koerbchen-Modpack.zip
         dest: /Koerbchen-Modpack.zip
