--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   },
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
-  "name": "Körble 2.0",
+  "name": "Koerbchen 2.0",
   "version": "1.2.5",
   "author": "",
   "files": [
