removed Enhanced Armaments

--- a/overrides/config/jei/ingredient-list-mod-sort-order.ini
+++ b/overrides/config/jei/ingredient-list-mod-sort-order.ini
@@ -33,7 +33,6 @@ Extra Alchemy
 Farmer's Delight
 Farmer's Knives
 Farmer's Respite
-Gate Of Babylon
 Gobber2
 Grappling Hook Mod
 Hex Casting
@@ -89,3 +88,7 @@ Direbats
 Heartstone
 Hexal
 labels
+Alloygery
+Create_compat
+Knaves' Needs
+Tom's Simple Storage Mod
